# muspectre

./: .clang-format  CMakeLists.txt  TangentChecker.ipynb  Untitled.ipynb  dummy.py  plast_observer.py  plastic_check.ipynb  plastic_comparator.py  plastic_example.py  py_solve_test.ipynb  stress_strain.ipynb
cmake/: FindFFTW.cmake  FindFFTWMPI.cmake  FindNetCDF.cmake  FindPFFT.cmake  cpplint.cmake  muspectreTools.cmake
dockerfiles/: docker_debian_testing
language_bindings/python/: CMakeLists.txt  bind_py_cell.cc  bind_py_fftengine.cc  bind_py_field_collection.cc  bind_py_material.cc  bind_py_material_crystal_plasticity_finite.cc  bind_py_material_hyper_elasto_plastic1.cc  bind_py_material_linear_elastic1.cc  bind_py_material_linear_elastic2.cc  bind_py_material_linear_elastic3.cc  bind_py_material_linear_elastic4.cc  bind_py_projections.cc  bind_py_solvers.cc
language_bindings/python/muSpectre/: __init__.py  fft.py  tools.py
src/: CMakeLists.txt
tests/: header_test_eigen_tools.cc  header_test_field_collections.cc  header_test_fields.cc  header_test_ref_array.cc  header_test_t4_map.cc  mpi_test_fft_engine.cc  mpi_test_projection.hh  mpi_test_projection_finite.cc  mpi_test_projection_small.cc  mpi_test_solver_newton_cg.cc  netcdf_test_muLib.cc  py_comparison_test_material_hyper_elasto_plastic1.cc  py_comparison_test_material_hyper_elasto_plastic1.py  py_comparison_test_material_linear_elastic1.cc  py_comparison_test_material_linear_elastic1.py  python_binding_tests.py  python_exact_reference_elastic_test.py  python_exact_reference_plastic_test.py  python_exact_reference_test.py  python_fft_tests.py  python_field_tests.py  python_material_crystal_plasticity_finite1.py  python_material_linear_elastic3_test.py  python_material_linear_elastic4_test.py  python_mpi_binding_tests.py  python_mpi_material_linear_elastic4_test.py  python_mpi_projection_tests.py  test_cell_base.cc  test_eigen_tools.cc  test_field_collections_2.cc  test_field_collections_3.cc  test_fields.cc  test_geometry.cc  test_goodies.hh  test_material_crystal_plasticity_finite.cc  test_material_hyper_elasto_plastic1.cc  test_material_linear_elastic1.cc  test_material_linear_elastic3.cc  test_material_linear_elastic4.cc  (+10 more)
(+94 files in other folders)
